--- a/src/components/Table/Table.style.scss
+++ b/src/components/Table/Table.style.scss
@@ -1,22 +1,41 @@
+@use "styles/abstracts/mixins" as *;
+
 .Table {
+  --cell-max-width: 15rem;
+
   margin-inline: unset;
   overflow: auto;
 
-  .wrapper {
+  .body {
     display: flex;
   }
 
+  .footer {
+    min-height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: var(--spacing-l);
+
+    @include positioning(
+      $position: sticky,
+      $inline: 0,
+      $block: 100%,
+      $x: 0,
+      $y: 0
+    );
+  }
+
   .prefix {
-    position: sticky;
-    z-index: 2;
+    z-index: 5;
 
-    &[dir="ltr"] {
-      left: 0;
-    }
-
-    &[dir="rtl"] {
-      right: 0;
-    }
+    @include positioning(
+      $position: sticky,
+      $inline: 0,
+      $block: 0,
+      $x: 0,
+      $y: 0
+    );
 
     th,
     td {
@@ -81,10 +100,13 @@
     }
 
     &.clip {
-      max-width: 15rem;
-      overflow-x: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
+      max-width: var(--cell-max-width);
+
+      &:not(.buttonCell) {
+        overflow-x: hidden; // causes issus in Chrome
+        white-space: nowrap;
+        text-overflow: ellipsis;
+      }
     }
   }
 }
