--- a/src/components/Form/PhoneNumberInput/PhoneNumberInput.style.scss
+++ b/src/components/Form/PhoneNumberInput/PhoneNumberInput.style.scss
@@ -16,6 +16,7 @@
       border-block-start: none;
       border-start-start-radius: 0;
       border-start-end-radius: 0;
+      outline-offset: -1px;
     }
 
     .call {
