--- a/src/components/LanguageSelector/LanguageSelector.style.scss
+++ b/src/components/LanguageSelector/LanguageSelector.style.scss
@@ -1,9 +1,7 @@
-/* LANGUAGE SELECTOR */
-
 .LanguageSelector {
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: var(--spacing-l);
   direction: ltr;
 
   .element {
