--- a/src/components/Sidebar/Sidebar.style.scss
+++ b/src/components/Sidebar/Sidebar.style.scss
@@ -2,12 +2,14 @@
 
 .Sidebar {
   --sidebar-width: var(--closed-sidebar-width);
+  --c-background: var(--c-primary-400);
+  --c-foreground: var(--c-white);
 
   width: var(--sidebar-width);
   height: 100vh;
   overflow-y: scroll;
   padding: var(--spacing-xl) var(--spacing-m);
-  background-color: var(--c-primary-400);
+  background-color: var(--c-background);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -66,8 +68,12 @@
     gap: var(--spacing-m);
 
     .element {
+      --fill-color: var(--c-foreground);
+      --stroke-color: var(--c-foreground);
+
       width: 100%;
       height: 3rem;
+      background-color: var(--c-background);
       padding: var(--spacing-m);
       border-radius: 0.25rem;
       display: flex;
@@ -80,32 +86,22 @@
       }
 
       &:hover {
-        background-color: var(--c-shadow-300);
+        --c-background: var(--c-shadow-300);
       }
 
       &.selected {
-        background-color: var(--c-white);
-
-        .label {
-          color: var(--c-primary-400);
-        }
-
-        .icon {
-          fill: var(--c-primary-400);
-          stroke: var(--c-primary-400);
-        }
+        --c-foreground: var(--c-primary-400);
+        --c-background: var(--c-white);
       }
 
       .label {
-        color: var(--c-white);
+        color: var(--c-foreground);
         font-weight: 600;
       }
 
       .icon {
         width: 100%;
         height: 100%;
-        fill: var(--c-white);
-        stroke: var(--c-white);
       }
     }
   }
