--- a/src/components/SearchBar/SearchBar.style.scss
+++ b/src/components/SearchBar/SearchBar.style.scss
@@ -18,15 +18,14 @@
   }
 
   .searchField {
+    --fill-color: var(--c-gray-300);
+
     .icon {
       width: 1.25rem;
-      fill: var(--c-gray-300);
     }
 
     &:focus-within {
-      .icon {
-        fill: var(--c-gray-400);
-      }
+      --fill-color: var(--c-gray-400);
     }
 
     .FieldWrapper {
