--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -17,6 +17,10 @@ html {
   // min-width: 800px;
 }
 
+p {
+  white-space: pre-wrap;
+}
+
 button {
   border: none;
   background-color: transparent;
