--- a/src/components/Buttons/Button/Button.style.scss
+++ b/src/components/Buttons/Button/Button.style.scss
@@ -7,7 +7,7 @@
   font-size: 1rem;
   display: flex;
   align-items: center;
-  gap: var(--spacing-m);
+  gap: var(--spacing-s);
   position: relative;
 
   &:not(.plain-text) {
