--- a/src/components/Form/MenuInput/MenuInput.style.scss
+++ b/src/components/Form/MenuInput/MenuInput.style.scss
@@ -43,4 +43,20 @@
       }
     }
   }
+
+  .searchField {
+    --fill-color: var(--c-gray-300);
+
+    .icon {
+      width: 1.25rem;
+    }
+
+    &:focus-within {
+      --fill-color: var(--c-gray-400);
+    }
+
+    .FieldWrapper {
+      gap: var(--spacing-m);
+    }
+  }
 }
