--- a/src/components/Buttons/Button/Button.style.scss
+++ b/src/components/Buttons/Button/Button.style.scss
@@ -1,4 +1,5 @@
 @use "styles/components/button" as *;
+@use "styles/abstracts/mixins" as *;
 
 .Button {
   --fill-color: var(--c-gray-300);
@@ -16,4 +17,18 @@
   }
 
   @include buttonVariants();
+
+  &.isLoading {
+    color: transparent;
+
+    & > * {
+      opacity: 0;
+    }
+
+    .loadingIndicator {
+      opacity: 1;
+
+      @include positioning();
+    }
+  }
 }
