Renamed NewStudent page to StudentEnroll

--- a/src/pages/Students/StudentEnroll/StudentEnroll.style.scss
+++ b/src/pages/Students/StudentEnroll/StudentEnroll.style.scss
@@ -1,6 +1,6 @@
 @use "styles/abstracts/mixins" as *;
 
-.NewStudent {
+.StudentEnroll {
   @include banner();
   @include floatingLanguageSelector();
 }
