--- a/src/pages/SignIn/SignIn.style.scss
+++ b/src/pages/SignIn/SignIn.style.scss
@@ -2,7 +2,7 @@
 
 .SignIn {
   width: 100vw;
-  min-width: 50rem;
+  min-width: var(--width-m);
   height: 100vh;
   padding: 6rem;
   position: relative;
