--- a/src/components/Container/Container.style.scss
+++ b/src/components/Container/Container.style.scss
@@ -81,6 +81,7 @@
       & > .title {
         text-align: center;
         padding: 1rem 3rem;
+        text-transform: capitalize;
       }
     }
   }
