--- a/src/components/Icons/Avatar/Avatar.style.scss
+++ b/src/components/Icons/Avatar/Avatar.style.scss
@@ -7,9 +7,10 @@
 
   @include circle(3rem, var(--c-primary-100));
 
-  img {
+  .photo {
     width: 100%;
     height: 100%;
+    position: relative;
   }
 
   .head {
