--- a/src/pages/Students/EnrollLinks/EnrollLinks.style.scss
+++ b/src/pages/Students/EnrollLinks/EnrollLinks.style.scss
@@ -10,7 +10,9 @@
   }
 
   .withAction {
-    height: 100%;
+    height: var(--row-height);
+    display: flex;
+    align-items: center;
     position: relative;
 
     &:hover {
