Created layouts and updated teacher list

--- a/src/components/Layouts/FormLayout/FormLayout.style.scss
+++ b/src/components/Layouts/FormLayout/FormLayout.style.scss
@@ -1,6 +1,6 @@
 @use "styles/abstracts/mixins" as *;
 
-.NewCustomer {
+.FormLayout {
   @include banner();
   @include floatingLanguageSelector();
 }
