--- a/src/components/Buttons/CloseButton/CloseButton.style.scss
+++ b/src/components/Buttons/CloseButton/CloseButton.style.scss
@@ -1,5 +1,6 @@
 .CloseButton {
   --fill-color: var(--c-gray-300);
+  background-color: var(--bg-color);
 
   width: 2rem;
   height: 2rem;
@@ -10,7 +11,6 @@
 
   &:hover {
     --fill-color: var(--c-white);
-
-    background-color: var(--c-danger-200);
+    --bg-color: var(--c-danger-200);
   }
 }
