--- a/src/components/Header/Header.style.scss
+++ b/src/components/Header/Header.style.scss
@@ -5,7 +5,7 @@
   padding-inline: var(--spacing-l);
   z-index: 80;
 
-  @include positioning($position: sticky, $block: 0, $y: 0, $x: 0);
+  @include positioning($position: sticky, $block: 0, $inline: 0, $y: 0, $x: 0);
 
   .logo {
     width: 3rem;
