Added a note for phone number comunication methods

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -33,3 +33,9 @@ svg {
     fill: var(--c-danger-300);
   }
 }
+
+[position^="before-"],
+[position^="after-"] {
+  color: var(--c-gray-300);
+  font-size: 0.875rem;
+}
