Made some minor refactoring and updates

--- a/src/components/Form/FieldHeader/FieldHeader.style.scss
+++ b/src/components/Form/FieldHeader/FieldHeader.style.scss
@@ -12,8 +12,9 @@
     }
 
     &.required::after {
-      content: " *";
+      content: "*";
       color: var(--c-danger-300);
+      margin-inline-start: 0.5ch;
     }
   }
 }
