Added applyFilter util, made minor bug fixes and type updates

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -34,8 +34,8 @@ svg {
   }
 }
 
-[position^="before-"],
-[position^="after-"] {
+[position="before-field"],
+[position="after-field"] {
   color: var(--c-gray-300);
   font-size: 0.875rem;
 }
