Made some minor updates and refactoring

--- a/src/components/Form/FieldHeader/FieldHeader.style.scss
+++ b/src/components/Form/FieldHeader/FieldHeader.style.scss
@@ -1,6 +1,11 @@
 .FieldHeader {
   display: flex;
   align-items: center;
+  pointer-events: none;
+
+  * {
+    pointer-events: auto;
+  }
 
   .label {
     height: 1.5rem;
